testing/Travis/testcases/prototype/shouldSucceed/try26.adl
CONTEXT Test IN ENGLISH

PATTERN Test26
RELATION r[A*C]
RELATION s[A*B]
RELATION t[C*B]
RELATION t[C*Q]
RULE Test: r = s;t~
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script tests whether flip works, after try1 was successful.
   Result: PASS
-}